--- a/pom.xml
+++ b/pom.xml
@@ -12,18 +12,48 @@
     <description>Generates HTML documentation from Qt.adoc using AsciidoctorJ</description>
 
     <properties>
-        <asciidoctor.maven.plugin.version>2.2.1</asciidoctor.maven.plugin.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <asciidoctor.maven.plugin.version>3.2.0</asciidoctor.maven.plugin.version>
+        <asciidoctorj.pdf.version>2.3.19</asciidoctorj.pdf.version>
+        <asciidoctorj.version>3.0.0</asciidoctorj.version>
+        <jruby.version>9.4.12.0</jruby.version>
     </properties>
 
     <build>
+		<defaultGoal>process-resources</defaultGoal>
         <plugins>
             <!-- Asciidoctor Maven Plugin -->
             <plugin>
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
                 <version>${asciidoctor.maven.plugin.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj-pdf</artifactId>
+                        <version>${asciidoctorj.pdf.version}</version>
+                    </dependency>
+                    <!-- Comment this section to use the default jruby artifact provided by the plugin -->
+                    <dependency>
+                        <groupId>org.jruby</groupId>
+                        <artifactId>jruby</artifactId>
+                        <version>${jruby.version}</version>
+                    </dependency>
+                    <!-- Comment this section to use the default AsciidoctorJ artifact provided by the plugin -->
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj</artifactId>
+                        <version>${asciidoctorj.version}</version>
+                    </dependency>
+                </dependencies>
 				<configuration>
 					<sourceDirectory>content/GuiFrameworks/Qt</sourceDirectory>
+                    <!-- Attributes common to all output formats -->
+                    <attributes>
+                        <sourcedir>${project.build.sourceDirectory}</sourcedir>
+                    </attributes>					
 				</configuration>
                 <executions>
                     <execution>
@@ -32,13 +62,17 @@
                             <goal>process-asciidoc</goal>
                         </goals>
                         <configuration>
-                            <sourceDocument>${project.basedir}/content/GuiFrameworks/Qt/Qt.adoc</sourceDocument>
-                            <outputDirectory>${project.build.directory}/generated-docs</outputDirectory>
+							<outputDirectory>${project.basedir}/books/pdf</outputDirectory>
+							<backend>pdf</backend>
+							<!--sourceDocument>${project.basedir}/content/GuiFrameworks/Qt/Qt.adoc</sourceDocument -->
+
                             <attributes>
-                                <doctype>article</doctype>
-                                <backend>html5</backend>
-                                <toc>left</toc> <!-- Table of Contents on the left -->
-                                <sectnums>true</sectnums> <!-- Enable section numbering -->
+                                <source-highlighter>rouge</source-highlighter>
+                                <icons>font</icons>
+                                <pagenums/>
+                                <toc/>
+                                <idprefix/>
+                                <idseparator>-</idseparator>
                             </attributes>
                         </configuration>
                     </execution>
