--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <asciidoctorj.pdf.version>2.3.19</asciidoctorj.pdf.version>
         <asciidoctorj.version>3.0.0</asciidoctorj.version>
         <jruby.version>9.4.12.0</jruby.version>
+		<output.html.dir></output.html.dir>
     </properties>
 
     <build>
@@ -64,8 +65,8 @@
 							<attributes>
 								<sourcedir>${project.build.sourceDirectory}</sourcedir>
 							</attributes>	
-							<outputDirectory>${project.basedir}/books/pdf</outputDirectory>
-							<backend>pdf</backend>
+							<outputDirectory>${project.build.directory}/Pages/Qt</outputDirectory>
+							<backend>html5</backend>
                             <!--attributes>
                                 <source-highlighter>rouge</source-highlighter>
                                 <icons>font</icons>
@@ -88,8 +89,8 @@
 							<attributes>
 								<sourcedir>${project.build.sourceDirectory}</sourcedir>
 							</attributes>	
-							<outputDirectory>${project.basedir}/books/pdf</outputDirectory>
-							<backend>pdf</backend>
+							<outputDirectory>${project.build.directory}/Pages/wxWidgets</outputDirectory>
+							<backend>html5</backend>
                             <!--attributes>
                                 <source-highlighter>rouge</source-highlighter>
                                 <icons>font</icons>
