--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,32 @@
                                 <idseparator>-</idseparator>
                             </attributes-->
                         </configuration>
+                    </execution>
+                    <execution>
+						<id>CSharpUnitTest</id>
+                        <phase>generate-resources</phase>
+						<goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+							<sourceDirectory>content/UnitTests/CSharp</sourceDirectory>
+							<!-- Attributes common to all output formats -->
+							<attributes>
+								<sourcedir>${project.build.sourceDirectory}</sourcedir>
+							</attributes>	
+							<outputDirectory>${project.build.directory}/Pages/CSharpUnitTests</outputDirectory>
+							<backend>html5</backend>
+                            <!--attributes>
+                                <source-highlighter>rouge</source-highlighter>
+                                <icons>font</icons>
+                                <pagenums/>
+                                <toc/>
+                                <idprefix/>
+                                <idseparator>-</idseparator>
+                            </attributes-->
+                        </configuration>
                     </execution>					
+					
                 </executions>
             </plugin>
         </plugins>
